Charger can be restarted, charging can be stopped when paused by ev

--- a/custom_components/defa_power/translations/sv.json
+++ b/custom_components/defa_power/translations/sv.json
@@ -1,180 +1,183 @@
 {
-    "config": {
-        "step": {
-            "reauth_confirm": {
-                "title": "Återautentisering krävs",
-                "description": "DEFA Power behöver återautentisera ditt konto"
-            },
-            "choose_method": {
-                "title": "Välj inloggningsmetod",
-                "data": {
-                    "method": "Inloggningsmetod"
-                }
-            },
-            "send_code": {
-                "title": "Logga in med telefonnummer",
-                "description": "Ange ditt telefonnummer för att få en SMS-kod.\n\nDu kan bara vara inloggad på en enhet åt gången per app som använder CloudCharge API.\nVälj en app att simulera som du inte använder.",
-                "data": {
-                    "phone_number": "Telefonnummer (med landskod)",
-                    "dev_token_options": "App att simulera",
-                    "custom_dev_token": "Anpassad utvecklartoken"
-                }
-            },
-            "sms_code": {
-                "title": "Ange SMS-kod",
-                "description": "Ange SMS-koden du fick",
-                "data": {
-                    "sms_code": "SMS-kod"
-                }
-            },
-            "manual_entry": {
-                "title": "Manuell inloggning",
-                "description": "Ange användar-id och token",
-                "data": {
-                    "user_id": "Användar-id",
-                    "token": "Token"
-                }
-            }
-        },
-        "abort": {
-            "existing_entry_not_found": "Befintlig post hittades inte.",
-            "reauth_successful": "Återautentisering lyckades",
-            "reconfigure_successful": "Omkonfiguration lyckades"
-        },
-        "error": {
-            "phonenumber_request_error": "Inloggningsbegäran misslyckades",
-            "phonenumber_invalid": "Ogiltigt telefonnummer",
-            "phonenumber_invalid_dev_token": "Ogiltig utvecklartoken",
-            "phonenumber_login_error": "Okänt fel inträffade",
-            "phonenumber_bad_request_error": "Felaktig begäran",
-            "phonenumber_invalid_login": "Ogiltig inloggning",
-            "phonenumber_no_login_attempts_found": "Inga inloggningsförsök hittades. Försök att skicka koden igen.",
-            "manual_entry_request_error": "Begäran misslyckades",
-            "manual_entry_auth_error": "Ogiltigt användar-id eller token",
-            "unknown": "Okänt fel inträffade"
+  "config": {
+    "step": {
+      "reauth_confirm": {
+        "title": "Återautentisering krävs",
+        "description": "DEFA Power behöver återautentisera ditt konto"
+      },
+      "choose_method": {
+        "title": "Välj inloggningsmetod",
+        "data": {
+          "method": "Inloggningsmetod"
         }
+      },
+      "send_code": {
+        "title": "Logga in med telefonnummer",
+        "description": "Ange ditt telefonnummer för att få en SMS-kod.\n\nDu kan bara vara inloggad på en enhet åt gången per app som använder CloudCharge API.\nVälj en app att simulera som du inte använder.",
+        "data": {
+          "phone_number": "Telefonnummer (med landskod)",
+          "dev_token_options": "App att simulera",
+          "custom_dev_token": "Anpassad utvecklartoken"
+        }
+      },
+      "sms_code": {
+        "title": "Ange SMS-kod",
+        "description": "Ange SMS-koden du fick",
+        "data": {
+          "sms_code": "SMS-kod"
+        }
+      },
+      "manual_entry": {
+        "title": "Manuell inloggning",
+        "description": "Ange användar-id och token",
+        "data": {
+          "user_id": "Användar-id",
+          "token": "Token"
+        }
+      }
     },
-    "options": {
-        "step": {
-            "init": {
-                "title": "Välj åtgärd",
-                "data": {
-                    "select_step": "Välj åtgärd"
-                }
-            },
-            "show_token": {
-                "title": "Nuvarande användar-id och token",
-                "description": "Användar-id och token kan inte redigeras här. Använd \"Konfigurera om\" för att ändra dem.",
-                "data": {
-                    "user_id": "Användar-id",
-                    "token": "Token"
-                }
-            }
-        }
+    "abort": {
+      "existing_entry_not_found": "Befintlig post hittades inte.",
+      "reauth_successful": "Återautentisering lyckades",
+      "reconfigure_successful": "Omkonfiguration lyckades"
     },
-    "selector": {
-        "login_method": {
-            "options": {
-                "phone_number": "Använd telefonnummer",
-                "manual": "Ange användar-id och token manuellt"
-            }
-        },
-        "dev_token_options": {
-            "options": {
-                "cloud_charge": "Cloud Charge",
-                "defa_power": "DEFA Power",
-                "custom": "Anpassad utvecklartoken (ange nedan)"
-            }
-        },
-        "select_step": {
-            "options": {
-                "show_current_token": "Visa nuvarande token"
-            }
-        }
-    },
-    "entity": {
-        "sensor": {
-            "defa_power_currency_code": {
-                "name": "Valutakod",
-                "state": {
-                    "cad": "Kanadensiska dollar",
-                    "chf": "Schweiziska franc",
-                    "czk": "Tjeckiska koruna",
-                    "dkk": "Danska kronor",
-                    "eur": "Euro",
-                    "gbp": "Brittiska pund",
-                    "huf": "Ungerska forint",
-                    "hrk": "Kroatiska kuna",
-                    "ils": "Israeliska shekel",
-                    "isk": "Isländska kronor",
-                    "mtl": "Maltesiska lira",
-                    "skk": "Slovakiska koruna",
-                    "nok": "Norska kronor",
-                    "sit": "Slovenska tolar",
-                    "pln": "Polska zloty",
-                    "ron": "Rumänska leu",
-                    "rol": "Rumänska leu (gammal)",
-                    "sek": "Svenska kronor",
-                    "usd": "Amerikanska dollar",
-                    "xof": "Västafrikanska CFA-franc"
-                }
-            },
-            "defa_power_meter_value": {
-                "name": "Total energiförbrukning"
-            },
-            "defa_power_transaction_meter_value": {
-                "name": "Energiförbrukning (nuvarande laddning)"
-            },
-            "defa_power_power_consumption": {
-                "name": "Laddningseffekt"
-            },
-            "defa_power_charging_state": {
-                "name": "Laddningstillstånd",
-                "state": {
-                    "ev_connected": "Elbil ansluten",
-                    "charging": "Laddar",
-                    "suspended_ev": "Pausad av elbil",
-                    "suspended_evse": "Pausad av laddstation",
-                    "idle": "Inaktiv",
-                    "unrecognized": "Oigenkänd"
-                }
-            },
-            "defa_power_status": {
-                "name": "Status",
-                "state": {
-                    "available": "Tillgänglig",
-                    "occupied": "Upptagen",
-                    "preparing": "Förbereder",
-                    "charging": "Laddar",
-                    "suspended_ev": "Pausad av elbil",
-                    "suspended_evse": "Pausad av laddstation",
-                    "finishing": "Avslutar",
-                    "faulted": "Fel",
-                    "unavailable": "Otillgänglig",
-                    "reserved": "Reserverad",
-                    "restarting": "Startar om",
-                    "facility_finishing": "Anläggning avslutar",
-                    "idle": "Inaktiv",
-                    "ev_connected": "Elbil ansluten"
-                }
-            },
-            "defa_power_power": {
-                "name": "Max laddningseffekt"
-            },
-            "defa_power_ampere": {
-                "name": "Strömgräns"
-            },
-            "defa_power_firmware_version": {
-                "name": "Firmware-version"
-            }
-        },
-        "button": {
-            "defa_power_start_charging": {
-                "name": "Starta laddning"
-            },
-            "defa_power_stop_charging": {
-                "name": "Stoppa laddning"
-            }
-        }
+    "error": {
+      "phonenumber_request_error": "Inloggningsbegäran misslyckades",
+      "phonenumber_invalid": "Ogiltigt telefonnummer",
+      "phonenumber_invalid_dev_token": "Ogiltig utvecklartoken",
+      "phonenumber_login_error": "Okänt fel inträffade",
+      "phonenumber_bad_request_error": "Felaktig begäran",
+      "phonenumber_invalid_login": "Ogiltig inloggning",
+      "phonenumber_no_login_attempts_found": "Inga inloggningsförsök hittades. Försök att skicka koden igen.",
+      "manual_entry_request_error": "Begäran misslyckades",
+      "manual_entry_auth_error": "Ogiltigt användar-id eller token",
+      "unknown": "Okänt fel inträffade"
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "Välj åtgärd",
+        "data": {
+          "select_step": "Välj åtgärd"
+        }
+      },
+      "show_token": {
+        "title": "Nuvarande användar-id och token",
+        "description": "Användar-id och token kan inte redigeras här. Använd \"Konfigurera om\" för att ändra dem.",
+        "data": {
+          "user_id": "Användar-id",
+          "token": "Token"
+        }
+      }
+    }
+  },
+  "selector": {
+    "login_method": {
+      "options": {
+        "phone_number": "Använd telefonnummer",
+        "manual": "Ange användar-id och token manuellt"
+      }
+    },
+    "dev_token_options": {
+      "options": {
+        "cloud_charge": "Cloud Charge",
+        "defa_power": "DEFA Power",
+        "custom": "Anpassad utvecklartoken (ange nedan)"
+      }
+    },
+    "select_step": {
+      "options": {
+        "show_current_token": "Visa nuvarande token"
+      }
+    }
+  },
+  "entity": {
+    "sensor": {
+      "defa_power_currency_code": {
+        "name": "Valutakod",
+        "state": {
+          "cad": "Kanadensiska dollar",
+          "chf": "Schweiziska franc",
+          "czk": "Tjeckiska koruna",
+          "dkk": "Danska kronor",
+          "eur": "Euro",
+          "gbp": "Brittiska pund",
+          "huf": "Ungerska forint",
+          "hrk": "Kroatiska kuna",
+          "ils": "Israeliska shekel",
+          "isk": "Isländska kronor",
+          "mtl": "Maltesiska lira",
+          "skk": "Slovakiska koruna",
+          "nok": "Norska kronor",
+          "sit": "Slovenska tolar",
+          "pln": "Polska zloty",
+          "ron": "Rumänska leu",
+          "rol": "Rumänska leu (gammal)",
+          "sek": "Svenska kronor",
+          "usd": "Amerikanska dollar",
+          "xof": "Västafrikanska CFA-franc"
+        }
+      },
+      "defa_power_meter_value": {
+        "name": "Total energiförbrukning"
+      },
+      "defa_power_transaction_meter_value": {
+        "name": "Energiförbrukning (nuvarande laddning)"
+      },
+      "defa_power_power_consumption": {
+        "name": "Laddningseffekt"
+      },
+      "defa_power_charging_state": {
+        "name": "Laddningstillstånd",
+        "state": {
+          "ev_connected": "Elbil ansluten",
+          "charging": "Laddar",
+          "suspended_ev": "Pausad av elbil",
+          "suspended_evse": "Pausad av laddstation",
+          "idle": "Inaktiv",
+          "unrecognized": "Oigenkänd"
+        }
+      },
+      "defa_power_status": {
+        "name": "Status",
+        "state": {
+          "available": "Tillgänglig",
+          "occupied": "Upptagen",
+          "preparing": "Förbereder",
+          "charging": "Laddar",
+          "suspended_ev": "Pausad av elbil",
+          "suspended_evse": "Pausad av laddstation",
+          "finishing": "Avslutar",
+          "faulted": "Fel",
+          "unavailable": "Otillgänglig",
+          "reserved": "Reserverad",
+          "restarting": "Startar om",
+          "facility_finishing": "Anläggning avslutar",
+          "idle": "Inaktiv",
+          "ev_connected": "Elbil ansluten"
+        }
+      },
+      "defa_power_power": {
+        "name": "Max laddningseffekt"
+      },
+      "defa_power_ampere": {
+        "name": "Strömgräns"
+      },
+      "defa_power_firmware_version": {
+        "name": "Firmware-version"
+      }
+    },
+    "button": {
+      "defa_power_start_charging": {
+        "name": "Starta laddning"
+      },
+      "defa_power_stop_charging": {
+        "name": "Stoppa laddning"
+      },
+      "defa_power_restart": {
+        "name": "Starta om laddare"
+      }
+    }
+  }
 }
