--- a/custom_components/defa_power/translations/sv.json
+++ b/custom_components/defa_power/translations/sv.json
@@ -161,9 +161,6 @@
       "defa_power_power": {
         "name": "Max laddningseffekt"
       },
-      "defa_power_ampere": {
-        "name": "Strömgräns"
-      },
       "defa_power_firmware_version": {
         "name": "Firmware-version"
       }
@@ -177,6 +174,11 @@
       },
       "defa_power_restart": {
         "name": "Starta om laddare"
+      }
+    },
+    "number": {
+      "defa_power_ampere": {
+        "name": "Strömgräns"
       }
     }
   }
