--- a/custom_components/defa_power/translations/sv.json
+++ b/custom_components/defa_power/translations/sv.json
@@ -180,6 +180,218 @@
       "defa_power_ampere": {
         "name": "Strömgräns"
       }
+    },
+    "select": {
+      "defa_power_eco_mode_schedule_monday": {
+        "name": "Eco-läge: Måndag avgångstid",
+        "state": {
+          "disabled": "Inaktiverad",
+          "0": "00:00",
+          "1": "01:00",
+          "2": "02:00",
+          "3": "03:00",
+          "4": "04:00",
+          "5": "05:00",
+          "6": "06:00",
+          "7": "07:00",
+          "8": "08:00",
+          "9": "09:00",
+          "10": "10:00",
+          "11": "11:00",
+          "12": "12:00",
+          "13": "13:00",
+          "14": "14:00",
+          "15": "15:00",
+          "16": "16:00",
+          "17": "17:00",
+          "18": "18:00",
+          "19": "19:00",
+          "20": "20:00",
+          "21": "21:00",
+          "22": "22:00",
+          "23": "23:00"
+        }
+      },
+      "defa_power_eco_mode_schedule_tuesday": {
+        "name": "Eco-läge: Tisdag avgångstid",
+        "state": {
+          "disabled": "Inaktiverad",
+          "0": "00:00",
+          "1": "01:00",
+          "2": "02:00",
+          "3": "03:00",
+          "4": "04:00",
+          "5": "05:00",
+          "6": "06:00",
+          "7": "07:00",
+          "8": "08:00",
+          "9": "09:00",
+          "10": "10:00",
+          "11": "11:00",
+          "12": "12:00",
+          "13": "13:00",
+          "14": "14:00",
+          "15": "15:00",
+          "16": "16:00",
+          "17": "17:00",
+          "18": "18:00",
+          "19": "19:00",
+          "20": "20:00",
+          "21": "21:00",
+          "22": "22:00",
+          "23": "23:00"
+        }
+      },
+      "defa_power_eco_mode_schedule_wednesday": {
+        "name": "Eco-läge: Onsdag avgångstid",
+        "state": {
+          "disabled": "Inaktiverad",
+          "0": "00:00",
+          "1": "01:00",
+          "2": "02:00",
+          "3": "03:00",
+          "4": "04:00",
+          "5": "05:00",
+          "6": "06:00",
+          "7": "07:00",
+          "8": "08:00",
+          "9": "09:00",
+          "10": "10:00",
+          "11": "11:00",
+          "12": "12:00",
+          "13": "13:00",
+          "14": "14:00",
+          "15": "15:00",
+          "16": "16:00",
+          "17": "17:00",
+          "18": "18:00",
+          "19": "19:00",
+          "20": "20:00",
+          "21": "21:00",
+          "22": "22:00",
+          "23": "23:00"
+        }
+      },
+      "defa_power_eco_mode_schedule_thursday": {
+        "name": "Eco-läge: Torsdag avgångstid",
+        "state": {
+          "disabled": "Inaktiverad",
+          "0": "00:00",
+          "1": "01:00",
+          "2": "02:00",
+          "3": "03:00",
+          "4": "04:00",
+          "5": "05:00",
+          "6": "06:00",
+          "7": "07:00",
+          "8": "08:00",
+          "9": "09:00",
+          "10": "10:00",
+          "11": "11:00",
+          "12": "12:00",
+          "13": "13:00",
+          "14": "14:00",
+          "15": "15:00",
+          "16": "16:00",
+          "17": "17:00",
+          "18": "18:00",
+          "19": "19:00",
+          "20": "20:00",
+          "21": "21:00",
+          "22": "22:00",
+          "23": "23:00"
+        }
+      },
+      "defa_power_eco_mode_schedule_friday": {
+        "name": "Eco-läge: Fredag avgångstid",
+        "state": {
+          "disabled": "Inaktiverad",
+          "0": "00:00",
+          "1": "01:00",
+          "2": "02:00",
+          "3": "03:00",
+          "4": "04:00",
+          "5": "05:00",
+          "6": "06:00",
+          "7": "07:00",
+          "8": "08:00",
+          "9": "09:00",
+          "10": "10:00",
+          "11": "11:00",
+          "12": "12:00",
+          "13": "13:00",
+          "14": "14:00",
+          "15": "15:00",
+          "16": "16:00",
+          "17": "17:00",
+          "18": "18:00",
+          "19": "19:00",
+          "20": "20:00",
+          "21": "21:00",
+          "22": "22:00",
+          "23": "23:00"
+        }
+      },
+      "defa_power_eco_mode_schedule_saturday": {
+        "name": "Eco-läge: Lördag avgångstid",
+        "state": {
+          "disabled": "Inaktiverad",
+          "0": "00:00",
+          "1": "01:00",
+          "2": "02:00",
+          "3": "03:00",
+          "4": "04:00",
+          "5": "05:00",
+          "6": "06:00",
+          "7": "07:00",
+          "8": "08:00",
+          "9": "09:00",
+          "10": "10:00",
+          "11": "11:00",
+          "12": "12:00",
+          "13": "13:00",
+          "14": "14:00",
+          "15": "15:00",
+          "16": "16:00",
+          "17": "17:00",
+          "18": "18:00",
+          "19": "19:00",
+          "20": "20:00",
+          "21": "21:00",
+          "22": "22:00",
+          "23": "23:00"
+        }
+      },
+      "defa_power_eco_mode_schedule_sunday": {
+        "name": "Eco-läge: Söndag avgångstid",
+        "state": {
+          "disabled": "Inaktiverad",
+          "0": "00:00",
+          "1": "01:00",
+          "2": "02:00",
+          "3": "03:00",
+          "4": "04:00",
+          "5": "05:00",
+          "6": "06:00",
+          "7": "07:00",
+          "8": "08:00",
+          "9": "09:00",
+          "10": "10:00",
+          "11": "11:00",
+          "12": "12:00",
+          "13": "13:00",
+          "14": "14:00",
+          "15": "15:00",
+          "16": "16:00",
+          "17": "17:00",
+          "18": "18:00",
+          "19": "19:00",
+          "20": "20:00",
+          "21": "21:00",
+          "22": "22:00",
+          "23": "23:00"
+        }
+      }
     }
   },
   "services": {
